Refactor: Code working locally

--- a/dapp/package.json
+++ b/dapp/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "hackathon-react-apollo-app",
+  "name": "wurstauction-dapp",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
