--- a/subgraph/package.json
+++ b/subgraph/package.json
@@ -7,6 +7,6 @@
     "build-wast": "graph build -t wast subgraph.yaml"
   },
   "devDependencies": {
-    "graph-cli": "https://github.com/graphprotocol/graph-cli.git#ethberlin"
+    "@graphprotocol/graph-cli": "^0.2.5"
   }
 }
