Graph-cli: update to 0.2.9

--- a/.gitignore
+++ b/.gitignore
@@ -3,12 +3,14 @@
 # dependencies
 dapp/node_modules
 node_modules
+subgraph/dist/
 
 # testing
 dapp/coverage
 
 # production
 dapp/build
+solidity/build
 
 # misc
 .DS_Store
