--- a/subgraph/package.json
+++ b/subgraph/package.json
@@ -5,10 +5,10 @@
     "build": "graph build subgraph.yaml",
     "build-ipfs": "graph build --ipfs /ip4/127.0.0.1/tcp/5001 subgraph.yaml",
     "build-wast": "graph build -t wast subgraph.yaml",
-    "deploy": "graph deploy --ipfs /ip4/127.0.0.1/tcp/5001 subgraph.yaml --node http://127.0.0.1:8020/  --verbosity debug -n \"cli\""
+    "deploy": "graph deploy subgraph.yaml --watch --verbosity debug --node http://35.242.224.197:8020/ --ipfs /ip4/35.242.224.197/tcp/8030 --subgraph-name bitsausage-subgraph"
   },
   "devDependencies": {
     "ganache-cli": "^6.1.7",
-    "@graphprotocol/graph-cli": "^0.2.5"
+    "@graphprotocol/graph-cli": "^0.2.9"
   }
 }
