--- a/solidity/package.json
+++ b/solidity/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "truffle": "^4.1.14",
     "truffle-contract": "^3.0.6",
+    "truffle-hdwallet-provider": "^0.0.6",
     "web3": "^1.0.0-beta.36",
     "zeppelin-solidity": "^1.12.0"
   },
